# intrptr

./: .gitignore  CMakeLists.txt  CppProperties.json  Makefile  README.md  output.txt  parsed.txt  sdt
Linuxbuild/src/: main.cpp.d
Linuxbuild/src/lexer/: lexer.cpp.d
Linuxbuild/src/translator/: translator.cpp.d
Linuxbuild/src/vm/: vm.cpp.d
src/: main.cpp
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/src/: main.cpp.d
src/src/lexer/: lexer.cpp.d
src/src/parser/: parser.cpp.d
src/translator/: translator.cpp  translator.h
src/utils/: opcode.h  pair.h  quad.h  token.h  tokenMap.cpp  tokenMap.h  tokenSymbolMap.h  varStruct.h
src/vm/: vm.cpp  vm.h
testfiles/: .examplecode.txt.un~  examplecode.txt  simpleifs.txt  simpleinits.txt
